fix(mobile): correct egregious dark UI colors
Some of the coloring issues on mobile at the moment are truly egregious.
They leave dark mode text on a light mode background (or vice-versa),
leading to the text being entirely unreadable.

This happens because we have some colors hardcoded. Replacing them with
variables fixes this.

There are still some hardcoded colors after this change. I'm not sure
that this fixes everything, but it fixes the most obvious issues.

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -261,6 +261,7 @@ td.jsdialog > [id^='table-box']:not(.sidebar) {
 .ui-badge {
 	padding: 5px !important;
 	background-color: var(--color-background-darker);
+	color: var(--color-text-darker);
 	border-width: 0px;
 	border-radius: var(--border-radius);
 	font-family: var(--cool-font);
